objects/Deal_Support__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Support</relationshipLabel>
        <relationshipName>Deal_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Benchmark</fullName>
                </value>
                <value>
                    <fullName>Customer Data Form</fullName>
                </value>
                <value>
                    <fullName>ROI</fullName>
                </value>
                <value>
                    <fullName>TCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce.com</fullName>
                </value>
                <value>
                    <fullName>AppFoundry</fullName>
                </value>
                <value>
                    <fullName>Callidus</fullName>
                </value>
                <value>
                    <fullName>Digital Postcard</fullName>
                </value>
                <value>
                    <fullName>Engagement Map</fullName>
                </value>
                <value>
                    <fullName>EveryoneSocial</fullName>
                </value>
                <value>
                    <fullName>Genie and related tools</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Reference Edge</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Support_AssignedTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avaya_Contract_Expiration__c</fullName>
        <label>Avaya Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Avaya_contract_attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avaya contract attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BE_Delivery_Date__c</fullName>
        <description>What it does: Date that the PS Budgetary Estimate was delivered
Downstream impact: Affects tracking on the Professional Services DSRs and reporting
Which department is owner: Professional Services</description>
        <label>BE Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BE_PS_Acceptance_Date__c</fullName>
        <description>What it does: Date that the PS Budgetary Estimate accepted by PS
Downstream impact: Affects tracking on the Professional Services DSRs and reporting
Which department is owner: Professional Services</description>
        <label>BE PS Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BE_Request_Date__c</fullName>
        <description>What it does: Date that the PS Budgetary Estimate was requested
Downstream impact: Affects tracking on the Professional Services DSRs and reporting
Which department is owner: Professional Services</description>
        <label>BE Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BE_Sales_Acceptance_Date__c</fullName>
        <description>What it does: Date that the PS Budgetary Estimate was accepted by Sales
Downstream impact: Affects tracking on the Professional Services DSRs and reporting
Which department is owner: Professional Services</description>
        <label>BE Sales Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCDB_Cancelled__c</fullName>
        <label>CCDB Cancelled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTO_Comments__c</fullName>
        <description>Added for POR DSR</description>
        <label>CTO Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending cancellation – With Billing</fullName>
                </value>
                <value>
                    <fullName>Pending cancellation – With Product</fullName>
                </value>
                <value>
                    <fullName>Pending cancellation – With Care</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Careinactivated__c</fullName>
        <label>Care Inactivated</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProductDeactivated__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cc_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cc Contact Lookup field for Send Email page on the Deal Support page.  Not intended to store info.</description>
        <inlineHelpText>UNUSED</inlineHelpText>
        <label>Cc Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deal Support Cc</relationshipLabel>
        <relationshipName>Deal_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloud_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select only when canceling a Cloud offering</inlineHelpText>
        <label>Cloud Deployment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Cloud_Deployment__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cloud_Deployment__c</referenceTo>
        <relationshipLabel>Deal Support</relationshipLabel>
        <relationshipName>Deal_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Replacing_Genesys__c</fullName>
        <label>Competitor Replacing Genesys</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Aspect (Voxeo)</fullName>
                </value>
                <value>
                    <fullName>Avaya (Nortel)</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Five9</fullName>
                </value>
                <value>
                    <fullName>InContact (CCI)</fullName>
                </value>
                <value>
                    <fullName>In-House Developed Solution</fullName>
                </value>
                <value>
                    <fullName>Other Local Vendor</fullName>
                </value>
                <value>
                    <fullName>Salesforce.Com</fullName>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>Verint (Kana/Lagan)</fullName>
                </value>
                <value>
                    <fullName>[24]7</fullName>
                </value>
                <value>
                    <fullName>8X8</fullName>
                </value>
                <value>
                    <fullName>Adeptra</fullName>
                </value>
                <value>
                    <fullName>Afiniti</fullName>
                </value>
                <value>
                    <fullName>Akcelerant</fullName>
                </value>
                <value>
                    <fullName>Altigen</fullName>
                </value>
                <value>
                    <fullName>Altitude</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Appian</fullName>
                </value>
                <value>
                    <fullName>ASC Telecom</fullName>
                </value>
                <value>
                    <fullName>Asterix</fullName>
                    <label>Asterisk</label>
                </value>
                <value>
                    <fullName>Bridgetec</fullName>
                </value>
                <value>
                    <fullName>Broadsoft</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>Calabrio</fullName>
                </value>
                <value>
                    <fullName>CallCopy</fullName>
                </value>
                <value>
                    <fullName>Call Fire</fullName>
                </value>
                <value>
                    <fullName>Call Miner</fullName>
                </value>
                <value>
                    <fullName>Centurion</fullName>
                </value>
                <value>
                    <fullName>Clarity Connect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Status__c</fullName>
        <label>Completion Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Proof_of_Displacement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Proof of Displacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_in_SF1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when Deal Support Request created in Salesforce1 mobile app</description>
        <label>Created in SF1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_who_Escalated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact who Escalated</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deal Support (Customer Contact who Escalated)</relationshipLabel>
        <relationshipName>Deal_Support3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer PO Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSR_SC_Engagement_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does: Lookup reference to a DSR SC Engagement (v2.0). Replaces the v1.0 SC Engagement Form (Wow Request Form)
Downstream Impact: used for storing the SC Engagement references, so if this is changed will need to be updated
Owner: Professional Services</description>
        <label>DSR SC Engagement Ref</label>
        <referenceTo>DSR_SCEngagement__c</referenceTo>
        <relationshipLabel>Deal Support</relationshipLabel>
        <relationshipName>Deal_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSR_Virtual_primary_email__c</fullName>
        <label>DSR Virtual primary email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_Time_Completed__c</fullName>
        <label>Date/Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <label>Deal Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-50</fullName>
                </value>
                <value>
                    <fullName>51-250</fullName>
                </value>
                <value>
                    <fullName>251-500</fullName>
                </value>
                <value>
                    <fullName>501-1000</fullName>
                </value>
                <value>
                    <fullName>1001-5000</fullName>
                </value>
                <value>
                    <fullName>&gt;5001</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <description>Professional Services Deployment Type</description>
        <label>Deployment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage Premise</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>Outbound Engagement</fullName>
                </value>
                <value>
                    <fullName>Premier Edition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DirectIndirect_Sale__c</fullName>
        <label>Direct/Indirect Sale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Deal Support</relationshipLabel>
        <relationshipName>Deal_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Point of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deal Support (End User Point of Contact)</relationshipLabel>
        <relationshipName>Deal_Support1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_message__c</fullName>
        <label>Error message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Focus_Area__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ForecastStatus1__c</fullName>
        <label>Forecast Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.Booked</fullName>
                </value>
                <value>
                    <fullName>1.In Hand</fullName>
                </value>
                <value>
                    <fullName>2.Commit</fullName>
                </value>
                <value>
                    <fullName>3.Expected</fullName>
                </value>
                <value>
                    <fullName>4.Upside</fullName>
                </value>
                <value>
                    <fullName>5.Pipeline</fullName>
                </value>
                <value>
                    <fullName>6.Omitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GARN_Account_Code__c</fullName>
        <description>What it Does? Capturing the Gran account code and display in the email templates. 
Downstream Impact? For account In -activation email template. 
Which department is owner? - DSR</description>
        <formula>Account__r.SAP_Account_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GARN Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Advisor_Account_Email__c</fullName>
        <label>Genesys Advisor Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Genesys_Advisors_manager_email__c</fullName>
        <label>Genesys Advisors Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ININ_Account_URL__c</fullName>
        <label>ININ Account URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ININ_Opportunity_URL__c</fullName>
        <label>ININ Opportunity URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ideas_Lab_Reference_Number__c</fullName>
        <inlineHelpText>Search for the Ideas Lab reference number (e.g., ENWEM-I-200) in SFDC by clicking on the “Browse all Ideas” button under Product Ideas Lab Section on the associated Account or Opportunity. As an alternative enter the Idea reference number here.</inlineHelpText>
        <label>Ideas Lab Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Team_Members__c</fullName>
        <description>Added for POR DSR</description>
        <label>Key Team Members</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Offer_Type__c</fullName>
        <label>Lead Platform Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Offer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lever__c</fullName>
        <inlineHelpText>L1 No Genesys Cloud Fees Until Avaya Contract Expires
L2 Avaya-to-Genesys Tech Cert Scholarships
L3 Partner Only PureBridge Acceleration Incentive
L4 No-Cost Messaging Apps Trial w/Genesys Cloud (Advisors only)
L5 Perpetual Prem Migration Incentive</inlineHelpText>
        <label>PureBridge Lever</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lever 1</fullName>
                </value>
                <value>
                    <fullName>Lever 2</fullName>
                </value>
                <value>
                    <fullName>Lever 3</fullName>
                </value>
                <value>
                    <fullName>Lever 5</fullName>
                </value>
                <value>
                    <fullName>Lever 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Premier Edition</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect Premise</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud Outbound</fullName>
                </value>
                <value>
                    <fullName>PureEngage Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_To_MSA_if_Custom__c</fullName>
        <inlineHelpText>Link to the MSA can be found under Active Contracts on the Account Page</inlineHelpText>
        <label>Link To MSA (if Custom)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Type2__c</fullName>
        <label>Opportunity Offering Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <label>Lead Platform</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pure Cloud</fullName>
                    <label>PureCloud</label>
                </value>
                <value>
                    <fullName>All Lines</fullName>
                    <default>true</default>
                    <label>All Lines</label>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect Premise</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud Outbound</fullName>
                </value>
                <value>
                    <fullName>PureEngage Premise</fullName>
                </value>
                <value>
                    <fullName>Premier Edition</fullName>
                </value>
                <value>
                    <fullName>Pure Engage</fullName>
                    <label>PureEngage</label>
                </value>
                <value>
                    <fullName>Pure Connect</fullName>
                    <label>PureConnect</label>
                </value>
                <value>
                    <fullName>ELC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Official_Cancelation_Date__c</fullName>
        <defaultValue>TODAY()+30</defaultValue>
        <label>Official Cancelation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Channel Manager</label>
        <referenceTo>partner_portal_prospect__c</referenceTo>
        <relationshipLabel>Deal Support (Opportunity Channel Manager)</relationshipLabel>
        <relationshipName>Deal_Support1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Forecast_Status__c</fullName>
        <description>Requested by Sean Campbell to have visibility into opp&apos;s forecast status. created by liam clifford 11.8.19</description>
        <formula>TEXT(Opportunity__r.ForecastStatus__c)</formula>
        <label>Opportunity Forecast Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <description>Pulling in Opportunity Source from Op</description>
        <formula>TEXT(Opportunity__r.Partner_Opportunity_Source__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Source set on Opportunity</inlineHelpText>
        <label>Opportunity Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Support</relationshipLabel>
        <relationshipName>Deal_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <description>Enter the unique ID for the Product instance being canceled. This number is sometimes call the Org, Tenant, Subscription, or Enterprise  ID and can be found on the Cloud Deployment object</description>
        <inlineHelpText>Enter the unique ID for the Product instance being canceled. This number is sometimes call the Org, Tenant, Subscription, or Enterprise  ID and can be found on the Cloud Deployment object</inlineHelpText>
        <label>Platform ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Approval__c</fullName>
        <label>Owner Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P2P_Region__c</fullName>
        <description>This value is selected on the DSR or entered via dataloader. This is NOT read in from the Opportunity.</description>
        <inlineHelpText>This value is selected on the DSR or entered via dataloader. This is NOT read in from the Opportunity.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POR_Disposition__c</fullName>
        <description>Added for POR DSR</description>
        <label>POR Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Conditionally Rejected</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POR_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added for POR DSR</description>
        <label>POR Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Support1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POR_Schedule_Date__c</fullName>
        <description>Added for POR DSR</description>
        <label>POR Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POR_Type__c</fullName>
        <description>Added for POR process.</description>
        <label>POR Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage Only</fullName>
                </value>
                <value>
                    <fullName>PureEngage With Outbound</fullName>
                </value>
                <value>
                    <fullName>Outbound Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_Acceptance_Date__c</fullName>
        <description>The most recent date that the PS Acceptance was recorded for the DSR</description>
        <label>PS Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PS_Acceptance_History__c</fullName>
        <description>History of Acceptance / Rejection for the DSR by the PS representatives</description>
        <label>PS Acceptance History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PS_Acceptance_Notes__c</fullName>
        <description>PS DSR Acceptance Notes</description>
        <label>PS Acceptance Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PS_Acceptance__c</fullName>
        <description>Indicates PS Acceptance of the DSR request and content</description>
        <label>PS Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_Expected_Delivery_Date__c</fullName>
        <description>PS Expected Delivery Date</description>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
</CustomObject>